sequent